projects.css
/* CSS Document */


/* Introduction Projects section*/

#intro-projects {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 60px;
    margin-bottom: 120px;
    gap: 60px;
}

#projects-description {
    text-align: center;
    padding: 0 15px;
    max-width: 762px;
}


/* Projects section */

#projects {
    display: flex;
    flex-direction: column;
    padding: 0 15px;
    gap: 120px;
    align-items: center;
}

.project-box {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 762px;
}

.project-box-headline {
    display: flex;
    padding: 15px;
    color: #F2EFDE;
    justify-content: center;

    background-color: #093409;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.project-box-image {
    display: flex;
    justify-content: center;
    padding: 15px;
    background: #247022;
}

.box-image {
    border-radius: 10px;
    width: 100%;
}

.box-bodytext {
    display: flex;
    flex-direction: column;
    padding: 15px;
    gap: 15px;
    background-color: #DBD1AD;
}

.project-box-arrow-down {
    display: flex;
    padding: 15px 0;
    justify-content: center;

    background: #247022;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}


/* Call to action button -> specific style on button is in base.css*/

#projects-cta {
    display: flex;
    justify-content: center;
    padding: 60px 15px;
}

